--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -1,7 +1,7 @@
 {
   "app": {
-    "title": "ختمة القرآن",
-    "subtitle": "رحلة قراءة القرآن التعاونية"
+    "title": "حسنة",
+    "subtitle": "العمل اهداء الى ثواب المرحومة الحاجة ام عبد الباقي"
   },
   "navigation": {
     "backToList": "العودة إلى القائمة",
@@ -18,6 +18,7 @@
     "ends": "تنتهي",
     "participants": "{n} مشارك | {n} مشاركين",
     "completed": "مكتمل",
+    "management": "إدارة الختمات",
     "noKhatmahs": "لم يتم العثور على ختمات",
     "noKhatmahsMatch": "لا توجد ختمات تطابق بحثك عن",
     "noKhatmahsAvailable": "لا توجد ختمات متاحة حتى الآن"
@@ -131,37 +132,91 @@
   },
   "prayerTimes": {
     "title": "أوقات الصلاة",
-    "locationSettings": "إعدادات الموقع",
-    "detectLocation": "اكتشاف موقعي",
-    "detecting": "جاري الكشف...",
-    "detectingLocation": "جاري تحديد موقعك...",
-    "loading": "جاري تحميل أوقات الصلاة...",
-    "selectFromPresets": "اختر من المدن المعروفة",
-    "selectCountry": "اختر الدولة",
-    "selectCountryPrompt": "اختر الدولة",
-    "locationName": "اسم الموقع",
-    "timezone": "المنطقة الزمنية",
-    "longitude": "خط الطول",
-    "latitude": "خط العرض",
     "fajr": "الفجر",
     "sunrise": "الشروق",
     "dhuhr": "الظهر",
+    "asr": "العصر",
     "sunset": "الغروب",
     "maghrib": "المغرب",
-    "poweredBy": "بواسطة",
-    "noData": "لا توجد بيانات متاحة",
+    "isha": "العشاء",
     "nextPrayer": "الصلاة القادمة",
-    "timeRemaining": "الوقت المتبقي",
-    "hijri": "هجري",
-    "loadingHijri": "جاري تحميل التاريخ الهجري...",
-    "hijriCalendar": "التقويم الهجري",
-    "hijriMonth": "الشهر",
-    "hijriYear": "السنة",
-    "leapYear": "سنة كبيسة",
-    "yes": "نعم",
-    "no": "لا",
-    "sunniCalendar": "سني",
-    "shiaCalendar": "شيعي"
+    "in": "في",
+    "locationSettings": "إعدادات الموقع",
+    "latitude": "خط العرض",
+    "longitude": "خط الطول",
+    "timezone": "المنطقة الزمنية",
+    "locationName": "اسم الموقع",
+    "save": "حفظ",
+    "cancel": "إلغاء",
+    "detectLocation": "تحديد موقعي",
+    "cityPresets": "المدن المحددة مسبقًا",
+    "selectCountry": "اختر الدولة",
+    "selectCity": "اختر المدينة",
+    "selectFromPresets": "اختر من المدن المحددة مسبقًا",
+    "noData": "لا توجد بيانات متاحة",
+    "loading": "جاري تحميل أوقات الصلاة..."
+  },
+  "hijriCalendar": {
+    "title": "التقويم الهجري",
+    "loading": "جاري تحميل التقويم...",
+    "error": "خطأ في تحميل التقويم",
+    "events": "الأحداث",
+    "astronomicalEvents": "الأحداث الفلكية",
+    "noEvents": "لا توجد أحداث لهذا اليوم",
+    "hijriYear": "هـ"
+  },
+  "qibla": {
+    "title": "القبلة",
+    "description": "استخدم بوصلة جهازك للعثور على اتجاه القبلة للصلاة.",
+    "latitude": "خط العرض",
+    "longitude": "خط الطول",
+    "detecting": "جاري التحديد...",
+    "detectLocation": "تحديد موقعي",
+    "calculate": "حساب اتجاه القبلة",
+    "directionIs": "اتجاه القبلة هو",
+    "fromNorth": "من الشمال",
+    "startCompass": "تشغيل البوصلة",
+    "stopCompass": "إيقاف البوصلة",
+    "holdFlat": "امسك جهازك بشكل مسطح ووجه الجزء العلوي من جهازك نحو الاتجاه الذي تواجهه.",
+    "whenAligned": "عندما تتوافق الإبرة الزرقاء مع الإبرة الخضراء، فأنت تواجه القبلة.",
+    "yourDirection": "اتجاهك الحالي",
+    "facingQibla": "أنت تواجه القبلة!",
+    "turnDevice": "قم بتدوير جهازك لمحاذاة اتجاه القبلة",
+    "initializing": "جاري تهيئة البوصلة...",
+    "waitingForReading": "في انتظار قراءة البوصلة...",
+    "direction": "اتجاه القبلة",
+    "angleToTurn": "زاوية الدوران",
+    "turnInstruction": "استدر {degrees}° لمواجهة القبلة"
+  },
+  "compass": {
+    "title": "البوصلة",
+    "permissionNeeded": "يلزم الوصول إلى البوصلة",
+    "iOSPermissionNeeded": "يتطلب نظام iOS إذنًا لاستخدام البوصلة. يرجى النقر على 'السماح بالوصول' أدناه.",
+    "allowAccess": "السماح بالوصول",
+    "notSupported": "البوصلة غير مدعومة على جهازك.",
+    "useGeolocation": "استخدم موقعك الحالي",
+    "detectLocation": "تحديد الموقع",
+    "detecting": "جاري التحديد...",
+    "accuracy": "الدقة",
+    "accuracyHigh": "عالية",
+    "accuracyMedium": "متوسطة",
+    "accuracyLow": "منخفضة",
+    "accuracyUnreliable": "غير موثوقة",
+    "calibrationInstructions": "تعليمات المعايرة",
+    "holdDeviceFlat": "١. امسك جهازك بشكل مستوٍ",
+    "moveInFigure8": "٢. حرك جهازك على شكل رقم ٨",
+    "rotateDevice360": "٣. قم بتدوير جهازك ٣٦٠ درجة",
+    "keepAwayFromMetal": "٤. ابقِ الجهاز بعيداً عن المعادن",
+    "manualCalibration": "بدء المعايرة",
+    "holdFlat": "يرجى حمل الجهاز بشكل مستوٍ",
+    "north": "شمال",
+    "northEast": "شمال شرق",
+    "east": "شرق",
+    "southEast": "جنوب شرق",
+    "south": "جنوب",
+    "southWest": "جنوب غرب",
+    "west": "غرب",
+    "northWest": "شمال غرب"
   },
   "common": {
     "save": "حفظ",
