--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -9,6 +9,7 @@
   },
   "khatmahList": {
     "title": "Khatmahs",
+    "management": "Khatmah Management",
     "search": "Search khatmahs by name or participant...",
     "clearSearch": "Clear search",
     "myCreatedKhatmahs": "My Created Khatmahs",
@@ -46,7 +47,6 @@
     "markComplete": "Mark Complete",
     "markIncomplete": "Mark Incomplete",
     "inProgress": "In Progress",
-    "completed": "Completed",
     "participants": "Participants ({count})",
     "joined": "Joined",
     "juz": "Juz",
@@ -132,37 +132,88 @@
   },
   "prayerTimes": {
     "title": "Prayer Times",
-    "locationSettings": "Location Settings",
-    "detectLocation": "Detect My Location",
-    "detecting": "Detecting...",
-    "detectingLocation": "Detecting your location...",
-    "loading": "Loading prayer times...",
-    "selectFromPresets": "Select from Presets",
-    "selectCountry": "Select Country",
-    "selectCountryPrompt": "Select a country",
-    "locationName": "Location Name",
-    "timezone": "Timezone",
-    "longitude": "Longitude",
-    "latitude": "Latitude",
     "fajr": "Fajr",
     "sunrise": "Sunrise",
     "dhuhr": "Dhuhr",
-    "sunset": "Sunset",
+    "asr": "Asr",
     "maghrib": "Maghrib",
-    "poweredBy": "Powered by",
-    "noData": "No prayer times data available",
+    "isha": "Isha",
+    "sunset": "Sunset",
     "nextPrayer": "Next Prayer",
-    "timeRemaining": "Time Remaining",
-    "hijri": "Hijri",
-    "loadingHijri": "Loading Hijri date...",
-    "hijriCalendar": "Hijri Calendar",
-    "hijriMonth": "Month",
-    "hijriYear": "Year",
-    "leapYear": "Leap Year",
-    "yes": "Yes",
-    "no": "No",
-    "sunniCalendar": "Sunni",
-    "shiaCalendar": "Shia"
+    "in": "in",
+    "locationSettings": "Location Settings",
+    "latitude": "Latitude",
+    "longitude": "Longitude",
+    "timezone": "Timezone",
+    "locationName": "Location Name",
+    "save": "Save",
+    "cancel": "Cancel",
+    "detectLocation": "Detect My Location",
+    "cityPresets": "City Presets",
+    "selectCountry": "Select Country",
+    "selectCity": "Select City",
+    "noData": "No prayer times data available",
+    "loading": "Loading prayer times..."
+  },
+  "hijriCalendar": {
+    "title": "Hijri Calendar",
+    "loading": "Loading calendar...",
+    "error": "Error loading calendar",
+    "events": "Events",
+    "astronomicalEvents": "Astronomical Events",
+    "noEvents": "No events for this day",
+    "hijriYear": "H"
+  },
+  "qibla": {
+    "title": "Qibla Finder",
+    "subtitle": "Find the direction of the Kaaba from your location",
+    "permission_required": "Please grant permission to access your location",
+    "permission_denied": "Location permission denied. Please enable location services",
+    "position_unavailable": "Unable to determine your position",
+    "timeout": "Request timed out. Please try again",
+    "unknown_error": "An unknown error occurred",
+    "compass_not_supported": "Compass not supported on this device",
+    "geolocation_not_supported": "Geolocation is not supported on this device",
+    "bearing": "Qibla Bearing",
+    "heading": "Current Heading",
+    "your_location": "Your Location",
+    "refresh_location": "Refresh Location",
+    "grant_permission": "Grant Location Permission",
+    "loading": "Getting your location..."
+  },
+  "compass": {
+    "title": "Compass",
+    "north": "North",
+    "northEast": "North East",
+    "east": "East",
+    "southEast": "South East",
+    "south": "South",
+    "southWest": "South West",
+    "west": "West",
+    "northWest": "North West",
+    "permissionNeeded": "Compass access needed",
+    "iOSPermissionNeeded": "iOS requires permission to use the compass. Please tap 'Allow Access' below.",
+    "allowAccess": "Allow Access",
+    "notSupported": "Compass is not supported on your device.",
+    "useGeolocation": "Use current location",
+    "detectLocation": "Detect Location",
+    "detecting": "Detecting...",
+    "accuracy": "Accuracy",
+    "accuracyHigh": "High",
+    "accuracyMedium": "Medium",
+    "accuracyLow": "Low",
+    "accuracyUnknown": "Unknown",
+    "magneticDeclination": "Magnetic Declination",
+    "calibrationNeeded": "Compass needs calibration. Wave your device in a figure-8 pattern.",
+    "showSettings": "Show Settings",
+    "hideSettings": "Hide Settings",
+    "manualCalibration": "Start Calibration",
+    "calibrationTip": "If compass direction is off, adjust it with these controls.",
+    "holdDeviceFlat": "1. Hold your device flat and level",
+    "moveInFigure8": "2. Move your device in a figure-8 pattern",
+    "rotateDevice360": "3. Rotate your device 360 degrees",
+    "keepAwayFromMetal": "4. Keep away from metal objects",
+    "holdFlat": "Please hold your device flat"
   },
   "common": {
     "save": "Save",
