--- a/frontend/src/locales/fa.json
+++ b/frontend/src/locales/fa.json
@@ -3,6 +3,26 @@
     "title": "ختم قرآن",
     "subtitle": "سفر خواندن دسته‌جمعی قرآن"
   },
+  "nav": {
+    "home": "خانه",
+    "khatmah": "ختم‌ها",
+    "calendar": "اوقات نماز",
+    "qibla": "قبله‌نما"
+  },
+  "features": {
+    "khatmah": {
+      "title": "ختم‌های قرآن",
+      "description": "در سفرهای خواندن دسته‌جمعی قرآن با دیگران شرکت کنید."
+    },
+    "calendar": {
+      "title": "اوقات نماز",
+      "description": "اوقات دقیق نماز را بر اساس موقعیت خود دریافت کنید."
+    },
+    "qibla": {
+      "title": "قبله‌نما",
+      "description": "جهت قبله را از هر نقطه در جهان پیدا کنید."
+    }
+  },
   "navigation": {
     "backToList": "بازگشت به لیست",
     "createNew": "ایجاد ختم جدید"
