--- a/frontend/src/locales/ku.json
+++ b/frontend/src/locales/ku.json
@@ -3,6 +3,26 @@
     "title": "خەتمی قورئان",
     "subtitle": "گەشتی خوێندنەوەی بەکۆمەڵی قورئان"
   },
+  "nav": {
+    "home": "سەرەکی",
+    "khatmah": "خەتمەکان",
+    "calendar": "کاتەکانی نوێژ",
+    "qibla": "قیبلەنما"
+  },
+  "features": {
+    "khatmah": {
+      "title": "خەتمەکانی قورئان",
+      "description": "بەشداری لە گەشتی خوێندنەوەی بەکۆمەڵی قورئان بکە لەگەڵ کەسانی تر."
+    },
+    "calendar": {
+      "title": "کاتەکانی نوێژ",
+      "description": "کاتەکانی دروستی نوێژ وەربگرە بە پێی شوێنی خۆت."
+    },
+    "qibla": {
+      "title": "قیبلەنما",
+      "description": "ئاڕاستەی قیبلە بدۆزەوە لە هەر شوێنێک لە جیهان."
+    }
+  },
   "navigation": {
     "backToList": "گەڕانەوە بۆ لیستەکە",
     "createNew": "دروستکردنی خەتمێکی نوێ"
